add AWS to .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
 DEFAULT_HOST: http://localhost:3000
+
+AWS_KEY:		YOUR_KEY
+AWS_SECRET:		YOUR_SECRET
+AWS_REGION:		YOUR_REGION
+AWS_BUCKET:		YOUR_BUCKET
