--- a/test/fixtures/photos.yml
+++ b/test/fixtures/photos.yml
@@ -1,3 +1,16 @@
+# == Schema Information
+#
+# Table name: photos
+#
+#  id         :integer          not null, primary key
+#  image      :string
+#  position   :integer
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#  width      :integer
+#  height     :integer
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
