--- a/test/fixtures/video_categories.yml
+++ b/test/fixtures/video_categories.yml
@@ -1,3 +1,20 @@
+# == Schema Information
+#
+# Table name: video_categories
+#
+#  id         :integer          not null, primary key
+#  name       :string
+#  position   :integer
+#  image      :string
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#  slug       :string
+#
+# Indexes
+#
+#  index_video_categories_on_slug  (slug) UNIQUE
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
