--- a/test/fixtures/clients.yml
+++ b/test/fixtures/clients.yml
@@ -8,6 +8,7 @@
 #  updated_at :datetime         not null
 #  position   :integer
 #  name       :string
+#  url        :string
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
